--- a/Coding Solutions/index.html
+++ b/Coding Solutions/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>All in Repo</title>
   </head>
 
@@ -24,35 +24,16 @@
 
     <section class="styles" id="styles">
       <!-- new card design starts -->
-      <div class="stylebox">
-             <!-- <div class="image">
+      <!-- <div class="stylebox">
+             <div class="image">
                  <img src="/3d flip hover effect/preview.png" alt="">
-             </div> -->
-            <p>Web Development Related</p>
+             </div>
+            <p>Sunt, venia</p>
             <div class="btn-group">
-            <a href="/Web Development/">View</a>
+            <a href="">View</a>
+            <a href="" class="code">Code</a>
             </div>
-        </div>
-
-        <div class="stylebox">
-          <!-- <div class="image">
-              <img src="/3d flip hover effect/preview.png" alt="">
-          </div> -->
-         <p>Coding Solution</p>
-         <div class="btn-group">
-         <a href="/Coding Solutions/">View</a>
-         </div>
-     </div>
-
-     <div class="stylebox">
-      <!-- <div class="image">
-          <img src="/3d flip hover effect/preview.png" alt="">
-      </div> -->
-     <p>Django Based</p>
-     <div class="btn-group">
-     <a href="/Django Based/">View</a>
-     </div>
- </div>
+        </div> -->
       <!-- new card design ends -->
     </section>
 
@@ -60,52 +41,43 @@
     <a href="#styles" class="fas fa-angle-up" id="scroll-top"></a>
     <!-- scroll back to top -->
 
+    
     <!-- footer -->
     <footer>
       <div class="content">
         <div class="left box">
           <div class="upper">
             <div class="topic">About us</div>
-            <p>Its a collections of my all the repos</p>
+            <p>
+              Its a collections of my all the repos
+            </p>
           </div>
         </div>
         <div class="middle box">
           <div class="topic">Other Projects</div>
           <div>
-            <a href="#">Will Update soon</a>
+            <a href="#"
+              >Will Update soon</a
+            >
           </div>
-          <div></div>
+          <div>
+            
+          </div>
         </div>
         <div class="right box">
           <div class="topic">Connect with me</div>
           <div class="media-icons">
-            <a href="https://discord.gg/PtKwxA8W"
-              ><i class="fab fa-github"></i
-            ></a>
-            <a href="https://twitter.com/Arpit456jain"
-              ><i class="fab fa-twitter"></i
-            ></a>
-            <a href="https://www.youtube.com/channel/UCXYPKje76RGS2Tgei81HQ-w"
-              ><i class="fab fa-youtube"></i
-            ></a>
-            <a href="https://arpit4567jain.pythonanywhere.com/"
-              ><i class="fab fa-linkedin-in"></i
-            ></a>
-            <a href="https://discord.gg/PtKwxA8W"
-              ><i class="fab fa-discord"></i
-            ></a>
-            <a href="https://discord.gg/PtKwxA8W"
-              ><i class="fab fa-telegram"></i
-            ></a>
+            <a href="https://discord.gg/PtKwxA8W"><i class="fab fa-github"></i></a>
+            <a href="https://twitter.com/Arpit456jain"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.youtube.com/channel/UCXYPKje76RGS2Tgei81HQ-w"><i class="fab fa-youtube"></i></a>
+            <a href="https://arpit4567jain.pythonanywhere.com/"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://discord.gg/PtKwxA8W"><i class="fab fa-discord"></i></a>
+            <a href="https://discord.gg/PtKwxA8W"><i class="fab fa-telegram"></i></a>
           </div>
         </div>
       </div>
       <div class="bottom">
-        <p>
-          Copyright © 2022
-          <a href="https://linktr.ee/arpit456jain">Arpit Jain</a> All rights
-          reserved
-        </p>
+        <p>Copyright © 2022 <a href="https://linktr.ee/arpit456jain">Arpit Jain</a> All rights reserved</p>
       </div>
     </footer>
     <!-- footer ends-->
@@ -118,7 +90,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script src="style_links.json"></script>
   </body>
 </html>
