--- a/Django Based/index.html
+++ b/Django Based/index.html
@@ -13,7 +13,7 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>All in Repo</title>
   </head>
 
@@ -24,35 +24,6 @@
 
     <section class="styles" id="styles">
       <!-- new card design starts -->
-      <div class="stylebox">
-             <!-- <div class="image">
-                 <img src="/3d flip hover effect/preview.png" alt="">
-             </div> -->
-            <p>Web Development Related</p>
-            <div class="btn-group">
-            <a href="/Web Development/">View</a>
-            </div>
-        </div>
-
-        <div class="stylebox">
-          <!-- <div class="image">
-              <img src="/3d flip hover effect/preview.png" alt="">
-          </div> -->
-         <p>Coding Solution</p>
-         <div class="btn-group">
-         <a href="/Coding Solutions/">View</a>
-         </div>
-     </div>
-
-     <div class="stylebox">
-      <!-- <div class="image">
-          <img src="/3d flip hover effect/preview.png" alt="">
-      </div> -->
-     <p>Django Based</p>
-     <div class="btn-group">
-     <a href="/Django Based/">View</a>
-     </div>
- </div>
       <!-- new card design ends -->
     </section>
 
@@ -118,7 +89,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script src="style_links.json"></script>
   </body>
 </html>
